--- a/packages/react-api/package.json
+++ b/packages/react-api/package.json
@@ -22,8 +22,8 @@
   "dependencies": {
     "@polkadot/api": "^12.2.1",
     "@polkadot/extension-compat-metamask": "^0.49.1",
-    "@polkadot/extension-dapp": "^0.49.1",
     "@polkadot/rpc-provider": "^12.2.1",
+    "@polkagate/extension-dapp": "^0.48.2",
     "fflate": "^0.8.1",
     "rxjs": "^7.8.1"
   },
